fix & feat(admin) : [~] fixed map z-index to work with base.html [+] updated to use one of the most recent build.html

--- a/PP2I1/src/frontend/static/css/admin.css
+++ b/PP2I1/src/frontend/static/css/admin.css
@@ -83,6 +83,7 @@ a:hover {
 
 #map {
 	height: 100%;
+	z-index: 0;
 }
 
 .bin-entry {
